Remove minimum deposit amount.

--- a/users/making-your-first-prediction.mdx
+++ b/users/making-your-first-prediction.mdx
@@ -5,7 +5,7 @@ description: A step-by-step guide to placing your first trade on Basemarket
 
 Ready to make your first prediction? This guide will walk you through placing your first trade on Basemarket.
 
-Before you start, make sure you have [created an account](/users/signing-up) and [deposited funds](/users/deposits) (minimum \$10).
+Before you start, make sure you have [created an account](/users/signing-up) and [deposited funds](/users/deposits).
 
 ### How to Trade
 
