Minor change to FAQ naming.

--- a/users/trading-limits.mdx
+++ b/users/trading-limits.mdx
@@ -1,5 +1,5 @@
 ---
-title: Does Basemarket Have Trading Limits?
+title: Are There Any Trading Limits?
 description: Understanding trading limits and liquidity on Basemarket
 ---
 
